--- a/README
+++ b/README
@@ -1,11 +1,15 @@
 
 This is an implementation of the JSON Schema specification (see:
-http://www.json-schema.org/). Most implementations today are JavaScript but this
-one is pure Java, with as little dependencies as possible.
+http://www.json-schema.org/). Most implementations today are written in
+JavaScript, but this one is pure Java. This allows pure server side JSON schema
+validation if this is what you are looking for.
 
-The draft helping as a reference is, for the moment, draft version 3. This
-implementation supports, as of now, ALL of the schema EXCEPT $ref (which may, or
-may not be, a stopgap to the usage of this project).
+The draft helping as a reference is, at the moment, draft version 3 (version 4
+is around the corner, for some defintion of "corner" -- understand, days, or a
+few weeks). This implementation supports, as of now, ALL of the schema EXCEPT
+$ref (which may, or may not be, a stopgap to the usage of this project), and
+custom "simple types" (the draft theoretically allows for one to register atomic
+type names as schemas).
 
 Version 0.1 is days away. It WILL be published on Maven. It WILL have complete
 Javadoc. It WILL have local-only "$ref" support (ie: { "$ref":
@@ -15,45 +19,45 @@ implemented.
 Sample usage:
 
 ----
-public void sampleValidation()
+public final void SampleValidation()
 {
-    //
-    // See the Jackson API to grab a schema. JasonHelper has a classpath-only
-    // retrieval mechanism, if you want to have a schema from another source,
-    // consider ObjectMapper from the Jackson API.
-    //
-    // Here, "schema" is the JSON document representing the schema, and
-    // "instance" is the JSON document to validate.
-
-    final JsonNode
-        schema = ...,
-        instance = ....;
-
-    final JsonValidator validator = new JsonValidator(schema);
-
-    //
-    // A ValidationReport object contains the state of validation. Right now it
-    // ALWAYS collects validation failure messages, as deep as it can. In the
-    // future, a version will exist which will NOT collect messages but which
-    // will answer correctly to the true/false method below:
-    //
-
-    final ValidationReport report = validator.validate(instance);
-
-    if (validator.isSuccess()) {
-        // OMG ponnies! We have a success!
-        return; // of course, do what you want, you may want to exit on failure
-                // instead
-    }
-
-    //
-    // On failure, with the default (as of now) ValidationReport object, you can
-    // collect error messages. This sample prints them out.
-    //
-
-    final List<String> errs = report.getMessages();
-
-    for (final String err: errs)
-        System.out.println(err);
-}
+    public static void main(final String... args)
+    {
+        //
+	// See the Jackson API to grab a schema. JasonHelper has a
+	// classpath-only retrieval mechanism, if you want to have a schema from
+	// another source, consider ObjectMapper from the Jackson API.
+        //
+	// Here, "schema" is the JSON document representing the schema, and
+	// "instance" is the JSON document to validate.
+    
+	final JsonNode schema = ..., instance = ....;
+    
+	final JsonValidator validator = new JsonValidator(schema);
+    
+        //
+	// A ValidationReport object contains the state of validation. Right now
+	// it ALWAYS collects validation failure messages, as deep as it can. In
+	// the future, a version will exist which will NOT collect messages but
+	// which will answer correctly to the true/false method below:
+        //
+    
+	final ValidationReport report = validator.validate(instance);
+    
+	if (validator.isSuccess()) {
+	    // OMG ponnies! We have a success!
+	    return; // of course, do what you want, you may want to exit on
+	    failure
+		    // instead
+	}
+    
+        //
+	// On failure, with the default (as of now) ValidationReport object, you
+	// can collect error messages. This sample prints them out.
+        //
+    
+	final List<String> errs = report.getMessages();
+    
+	for (final String err: errs) System.out.println(err); }
+]
 ----
