--- a/README
+++ b/README
@@ -19,7 +19,7 @@ implemented.
 Sample usage:
 
 ----
-public final void SampleValidation()
+public final class SampleValidation()
 {
     public static void main(final String... args)
     {
