--- a/README
+++ b/README
@@ -6,15 +6,14 @@ validation if this is what you are looking for.
 
 The draft helping as a reference is, at the moment, draft version 3 (version 4
 is around the corner, for some defintion of "corner" -- understand, days, or a
-few weeks). This implementation supports, as of now, ALL of the schema EXCEPT
-$ref (which may, or may not be, a stopgap to the usage of this project), and
-custom "simple types" (the draft theoretically allows for one to register atomic
-type names as schemas).
+few weeks).
 
-Version 0.1 is days away. It WILL be published on Maven. It WILL have complete
-Javadoc. It WILL have local-only "$ref" support (ie: { "$ref":
-"#/some/json/path/here" }. But before this happens, $ref needs to be
-implemented.
+This implementation supports all of section 5 except the following:
+
+- 5.27: id is not supported yet;
+- 5.28: $ref only understands URLs (not all URIs) or JSON paths (ie, "#/x/y"),
+  or a combination of both;
+- 5.29: $schema is not supported yet;
 
 Sample usage:
 
@@ -24,14 +23,14 @@ public final class SampleValidation()
     public static void main(final String... args)
     {
         //
-        // See the Jackson API to grab a schema. JasonHelper has a
-        // classpath-only retrieval mechanism, if you want to have a schema from
-        // another source, consider ObjectMapper from the Jackson API.
+        // See JsonLoader for loading schemas. You can load from URLs, File
+        // objects, resources and more.
         //
         // Here, "schema" is the JSON document representing the schema, and
         // "instance" is the JSON document to validate.
     
-        final JsonNode schema = ..., instance = ....;
+        final JsonNode schema = JsonLoader.fromURL("http://some.host/path/to/schema");
+        final JsonNode instance = JsonLoader.fromFile(...);
     
         final JsonValidator validator = new JsonValidator(schema);
     
@@ -39,20 +38,12 @@ public final class SampleValidation()
         // A ValidationReport object contains the state of validation. Right now
         // it ALWAYS collects validation failure messages, as deep as it can. In
         // the future, a version will exist which will NOT collect messages but
-        // which will answer correctly to the true/false method below:
+        // which will answer correctly to the .isSuccess() method below:
         //
     
         final ValidationReport report = validator.validate(instance);
     
         if (validator.isSuccess())
-            //
-            // OMG ponnies! We have a success!
-            //
-            //
-            // This sample exits with 0 (as any well-behaved standalone
-            // executable is supposed todo on success), but of course this is
-            // just an example
-            //
             System.exit(0);
     
         //
