README* updates, sorely needed too

--- a/README
+++ b/README
@@ -10,5 +10,5 @@ Github's project page at:
 https://github.com/fge/json-schema-validator
 
 In particular, have an eye on the Wiki, it is pretty much (with the generated
-Javadoc) the reference documentation as the implementation currently stands.
+Javadoc) the reference documentation at the moment.
 
